logs/foy-python.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/foy_python'...
Compiling './lib/python3.5/site-packages/foy_python/python_checker.py'...
***   File "./lib/python3.5/site-packages/foy_python/python_checker.py", line 12
    print version
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/foy_python/python_parser.py'...
***   File "./lib/python3.5/site-packages/foy_python/python_parser.py", line 39
    print "{package} {version}".format(package=package, version=version)
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/foy_python-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pytest-2.3.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sh-1.7.egg-info'...
Listing './lib/python3.5/site-packages/yolk'...
Compiling './lib/python3.5/site-packages/yolk/cli.py'...
***   File "./lib/python3.5/site-packages/yolk/cli.py", line 262
    print " %s %s (%s)" % (project_name, dist.version,
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yolk/plugins'...
Compiling './lib/python3.5/site-packages/yolk/plugins/__init__.py'...
***   File "./lib/python3.5/site-packages/yolk/plugins/__init__.py", line 98
    except Exception, err_msg:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yolk/setuptools_support.py'...
***   File "./lib/python3.5/site-packages/yolk/setuptools_support.py", line 72
    except DownloadURI, url:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yolk/utils.py'...
***   File "./lib/python3.5/site-packages/yolk/utils.py", line 40
    except Exception, errmsg:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yolk-0.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
